# ReziRezi

./: AUR, Neamțu, Ciuhodaru. Pârțuri & oximoroane. Personaje lovite de nulitate ｜ Starea Impostorilor #60_transcript.txt  Cel mai capabil pensionar din țară？ Servicii, masonerie, CA-uri, milioane! ｜ Starea Impostorilor #44_transcript.txt  Cozmin Gușă ⧸ Dezbateri cu duhoare de Piedone ⧸ Cu Prostănacu’ la Moscova ｜ Starea Impostorilor #80_transcript.txt  Cringe Antonescu. Oportunist, chiulangiu, blablagiu. Georgist și pontist ｜ Starea Impostorilor #94_transcript.txt  Dan Puric. Pui de acvilă. Pescuind cu Zamolxes. Câte prostii zice pe secundă! Starea Impostorilor 57_transcript.txt  Gabriela Firea： zărpălatecă, zăpăcitoare, impostoare. Produsul Securității ｜ Starea Impostorilor #52_transcript.txt  Review Mircea Geoană. Antecedente, anturaj, tupeu, ipocrizie, sinecuri, vomă. Starea Impostorilor 71_transcript.txt  Sfântul Divin Georgescu Nino-Nino. Urări de la fani. Adam și Eva erau români？ Starea Impostorilor 86_transcript.txt  Sonatul Călin Georgescu. De la delfinii împușcați la căprioara epilată ｜ Starea Impostorilor #81_transcript.txt  Starea Impostorilor cu Valeriu Nicolae_transcript.txt  Trupele speciale de băieți deștepți. Termite de partid și de stat. Sictir! ｜ Starea Impostorilor #46_transcript.txt  ULTIMA pe 2024. Cu ursul împăiat, prorusul cel sonat și autorul încrâncenat ｜ Starea Impostorilor 82_transcript.txt  create_knowledge_graph.py  download_clips.py  extract_names.py  knowledge_graph.html  main.py  process_jsons.py  (+9 more)
(+317 files in other folders)
